log
Sun 24 Sep 2023 10:14:52 PM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
efb41bc
Sun 24 Sep 2023 10:17:03 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:52: error: used struct type value where scalar is required
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                    ^
heap.c:22:58: error: expected ‘:’ before ‘;’ token
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                          ^
Compilation failed
3b30747
